force-app/main/default/objects/FundingAward/fields/gr_Funding_Amount_Status__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Amount_Status__c</fullName>
    <description>The status of the funding amount associated with an award (e.g., committed, obligated).</description>
    <inlineHelpText>The status of the funding amount associated with an award (e.g., committed, obligated).</inlineHelpText>
    <label>Funding Amount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appropriated</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Budgeted</fullName>
            </value>
            <value>
                <fullName>Carryover</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Deobligated</fullName>
            </value>
            <value>
                <fullName>Expended</fullName>
            </value>
            <value>
                <fullName>Obligated</fullName>
            </value>
            <value>
                <fullName>Offset</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Unliquidated Obligation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>