force-app/main/default/objects/FundingAward/fields/gr_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Source</label>
    <referenceTo>gr_Funding_Source__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>