force-app/main/default/objects/FundingAward/fields/gr_Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Type__c</fullName>
    <formula>text(gr_Funding_Source__r.gr_Funding_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Type</label>
    <type>Text</type>
</CustomField>