force-app/main/default/objects/FundingAward/recordTypes/gr_Funding_Award.recordType-meta.xml
<RecordType>
    <fullName>gr_Funding_Award</fullName>
    <active>true</active>
    <label>Funding Award Record Type</label>
</RecordType>